integration/snapshots/query-duplicates-exact-pair_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query --check duplicates --verbose
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
   Extracted requirements from 1 specifications 
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 3 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 3 references 

Duplicates: ✗ FAIL

  × Duplicate test annotations: 2 copies exceed the cap of 1
   ╭─[src/lib.rs:5:5]
 4 │     
 5 │ ╭─▶ //= spec.md#section-1
 6 │ │   //= type=test
 7 │ ├─▶ //# aaa bbb ccc
   · ╰──── Duplicate
 8 │     
   ╰────

Advice: 
  ☞ Related context for:
  │  Duplicate test annotations: 2 copies exceed the cap of 1
    ╭─[src/lib.rs:9:5]
  8 │     
  9 │ ╭─▶ //= spec.md#section-1
 10 │ │   //= type=test
 11 │ ├─▶ //# aaa bbb ccc
    · ╰──── Duplicate
    ╰────

  × Subsumed annotation: its claim is fully covered by other annotations
   ╭─[src/lib.rs:1:5]
 1 │ ╭─▶ //= spec.md#section-1
 2 │ │   //= type=test
 3 │ ├─▶ //# aaa
   · ╰──── Subsumed
 4 │     
   ╰────

Advice: 
  ☞ Related context for:
  │  Subsumed annotation: its claim is fully covered by other annotations
   ╭─[src/lib.rs:5:5]
 4 │     
 5 │ ╭─▶ //= spec.md#section-1
 6 │ │   //= type=test
 7 │ ├─▶ //# aaa bbb ccc
   · ╰──── Covered by
 8 │     
   ╰────

Advice: 
  ☞ Related context for:
  │  Subsumed annotation: its claim is fully covered by other annotations
    ╭─[src/lib.rs:9:5]
  8 │     
  9 │ ╭─▶ //= spec.md#section-1
 10 │ │   //= type=test
 11 │ ├─▶ //# aaa bbb ccc
    · ╰──── Covered by
    ╰────

  ☞ Annotations with some overlap
   ╭─[src/lib.rs:1:5]
 1 │ ╭─▶ //= spec.md#section-1
 2 │ │   //= type=test
 3 │ ├─▶ //# aaa
   · ╰──── Some overlap
 4 │     
   ╰────

  ☞ Annotations with some overlap
   ╭─[src/lib.rs:1:5]
 1 │ ╭─▶ //= spec.md#section-1
 2 │ │   //= type=test
 3 │ ├─▶ //# aaa
   · ╰──── Some overlap
 4 │     
   ╰────


Overall: ✗ FAIL
