integration/snapshots/query-duplicates-exclusivity-family_stdout.snap
---
source: xtask/src/tests.rs
expression: stdout
---
$ duvet query --check duplicates
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 2 references 

Duplicates: ✓ PASS


Overall: ✓ PASS
