integration/snapshots/query-duplicates-stacked-claim_stderr.snap
---
source: xtask/src/tests.rs
expression: stderr
---
$ duvet query --check duplicates
EXIT: Some(1)
    Starting duvet in query mode...
  Extracting requirements
    Scanning sources
     Scanned 1 sources 
     Parsing annotations
      Parsed 2 annotations 
     Loading specifications
      Loaded 1 specifications 
     Mapping sections
      Mapped 1 sections 
    Matching references
     Matched 2 references 

Duplicates: ✗ FAIL

  × Same claim stacked on one target (src/lib.rs:7)
   ╭─[src/lib.rs:1:5]
 1 │ ╭─▶ //= spec.md#section-1
 2 │ │   //= type=test
 3 │ ├─▶ //# aaa bbb ccc
   · ╰──── Stacked
 4 │     
   ╰────

Advice: 
  ☞ Related context for:
  │  Same claim stacked on one target (src/lib.rs:7)
   ╭─[src/lib.rs:5:5]
 4 │     
 5 │ ╭─▶ //= spec.md#section-1
 6 │ ├─▶ //# aaa bbb ccc
   · ╰──── Stacked
 7 │     pub fn stacked() {}
   ╰────


Overall: ✗ FAIL
